testCases/parserTestCases/error/varTail.cs16
/*
    This test incorrect input when its expected either [5] or nothing
    Author: Chris Kaebe
    Date: Feb 21, 2016
*/

void main(void){
    int x[5];
    x[1] := x6];

    x[2] := x[];

    x[3] := x[4;
}